@@ -3,3 +3,32 @@
 	"-//Sun Microsystems, Inc.//DTD Enterprise JavaBeans 2.0//EN" 
 	"http://java.sun.com/dtd/ejb-jar_2_0.dtd">
 
+<ejb-jar>
+
+	<description><![CDATA[No Description.]]></description>
+	<display-name>ejb-jar.xml - JMWS session</display-name>
+	
+	
+	<!--
+		Deployment descriptor for EJBs objects.
+	
+		JMWS - Written by Mikael Barbeaux
+	-->
+	
+	<enterprise-beans>
+	
+	
+		<!-- Session Bean : UserCreation -->
+		<session>
+			<display-name>UserCreation SessionBean</display-name>
+			<ejb-name>UserCreation</ejb-name>
+			<home>org.jmws.session.user.creation.UserCreationHome</home>
+			<remote>org.jmws.session.user.creation.UserCreationRemote</remote>
+			<ejb-class>org.jmws.session.user.creation.UserCreation</ejb-class>
+			<session-type>Stateless</session-type>
+			<transaction-type>Container</transaction-type>
+		</session>
+	
+	</enterprise-beans>
+	
+</ejb-jar>
