@@ -4,3 +4,15 @@
 	"http://www.jboss.org/j2ee/dtd/jboss_3_2.dtd">
 
 	
+<jboss>
+
+	<enterprise-beans>
+		
+		<session>
+			<ejb-name>UserCreation</ejb-name>
+			<jndi-name>jmws/session/UserCreation</jndi-name>
+		</session>
+		
+	</enterprise-beans>
+	
+</jboss>	
